--- a/calc/style.css
+++ b/calc/style.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    min-height: 100vw;
+    height: 1000px;
 }
 
 .my__calculator {
